ENH: Add more icons into qMRMLWidgets
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14496 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/Resources/qMRMLWidgets.qrc
+++ b/Libs/qMRMLWidgets/Resources/qMRMLWidgets.qrc
@@ -27,6 +27,8 @@
     <file>Icons/SliceViewerLB.png</file>
     <file>Icons/SliceViewerOR.png</file>
 
+    <file>Icons/SlicerAutomaticSliceSpacing.png</file>
+    <file>Icons/SlicerManualSliceSpacing.png</file>
     <file>Icons/SlicesAnnotation.png</file>
     <file>Icons/SlicesComposite.png</file>
     <file>Icons/SlicesCrosshair.png</file>
@@ -35,9 +37,15 @@
     <file>Icons/SlicesFeaturesVisible.png</file>
     <file>Icons/SlicesFieldOfView.png</file>
     <file>Icons/SlicesFitToWindow.png</file>
+    <file>Icons/SlicesLabelNoOutline.png</file>
+    <file>Icons/SlicesLabelOutline.png</file>
     <file>Icons/SlicesLabelOpacity.png</file>
+    <file>Icons/SlicerRotateToPixelSpace.png</file>
     <file>Icons/SlicesSpatialUnit.png</file>
     <file>Icons/SlicesToggleFgBg.png</file>
+    <file>Icons/SlicesWinLevThreshCol.png</file>
+    <file>Icons/SliceWidgetOff.png</file>
+    <file>Icons/SliceWidgetOn.png</file>
 
     <file>Icons/ViewCamera.png</file>
     <file>Icons/ViewCameraSelect.png</file>
