--- a/Base/QTGUI/Resources/qSlicerBaseQTGUI.qrc
+++ b/Base/QTGUI/Resources/qSlicerBaseQTGUI.qrc
@@ -1,11 +1,56 @@
 <!DOCTYPE RCC><RCC version="1.0">
   <qresource>
     <file>Icons/SaveScene.png</file>
-    <file>Icons/LoadScene.png</file>
-    <file>Icons/LoadVolume.png</file>
 
-    <file>Icons/Next.png</file>
-    <file>Icons/Previous.png</file>
+    <file>Icons/Small/SlicerAddColorLUT.png</file>
+    <file>Icons/Medium/SlicerAddColorLUT.png</file>
+    <file>Icons/Large/SlicerAddColorLUT.png</file>
+    <file>Icons/XLarge/SlicerAddColorLUT.png</file>
+
+    <file>Icons/Small/SlicerAddData.png</file>
+    <file>Icons/Medium/SlicerAddData.png</file>
+    <file>Icons/Large/SlicerAddData.png</file>
+    <file>Icons/XLarge/SlicerAddData.png</file>
+
+    <file>Icons/Small/SlicerAddFiducialList.png</file>
+    <file>Icons/Medium/SlicerAddFiducialList.png</file>
+    <file>Icons/Large/SlicerAddFiducialList.png</file>
+    <file>Icons/XLarge/SlicerAddFiducialList.png</file>
+
+    <file>Icons/Small/SlicerAddModel.png</file>
+    <file>Icons/Medium/SlicerAddModel.png</file>
+    <file>Icons/Large/SlicerAddModel.png</file>
+    <file>Icons/XLarge/SlicerAddModel.png</file>
+
+    <file>Icons/Small/SlicerAddScalarOverlay.png</file>
+    <file>Icons/Medium/SlicerAddScalarOverlay.png</file>
+    <file>Icons/Large/SlicerAddScalarOverlay.png</file>
+    <file>Icons/XLarge/SlicerAddScalarOverlay.png</file>
+
+    <file>Icons/Small/SlicerAddScene.png</file>
+    <file>Icons/Medium/SlicerAddScene.png</file>
+    <file>Icons/Large/SlicerAddScene.png</file>
+    <file>Icons/XLarge/SlicerAddScene.png</file>
+
+    <file>Icons/Small/SlicerAddTransform.png</file>
+    <file>Icons/Medium/SlicerAddTransform.png</file>
+    <file>Icons/Large/SlicerAddTransform.png</file>
+    <file>Icons/XLarge/SlicerAddTransform.png</file>
+
+    <file>Icons/Small/SlicerAddVolume.png</file>
+    <file>Icons/Medium/SlicerAddVolume.png</file>
+    <file>Icons/Large/SlicerAddVolume.png</file>
+    <file>Icons/XLarge/SlicerAddVolume.png</file>
+
+    <file>Icons/Medium/SlicerLoadDICOM.png</file>
+
+    <file>Icons/Small/SlicerLoadScene.png</file>
+    <file>Icons/Medium/SlicerLoadScene.png</file>
+    <file>Icons/Large/SlicerLoadScene.png</file>
+    <file>Icons/XLarge/SlicerLoadScene.png</file>
+
+    <file>Icons/Medium/SlicerVolumes.png</file>
+
     <file>Icons/ModuleHistory.png</file>
     <file>Icons/Undo.png</file>
     <file>Icons/Redo.png</file>
