--- a/QTModules/Annotation/Resources/UI/qSlicerAnnotationModule.ui
+++ b/QTModules/Annotation/Resources/UI/qSlicerAnnotationModule.ui
@@ -46,6 +46,9 @@ The buttons are therefore dynamically loaded into the GUI.</string>
             <iconset resource="../qSlicerAnnotationModule.qrc">
              <normaloff>:/Icons/AnnotationROI.png</normaloff>:/Icons/AnnotationROI.png</iconset>
            </property>
+           <property name="checkable">
+            <bool>true</bool>
+           </property>
           </widget>
          </item>
          <item row="0" column="1">
@@ -80,7 +83,7 @@ The buttons are therefore dynamically loaded into the GUI.</string>
              <normaloff>:/Icons/AnnotationDistance.png</normaloff>:/Icons/AnnotationDistance.png</iconset>
            </property>
            <property name="checkable">
-            <bool>false</bool>
+            <bool>true</bool>
            </property>
           </widget>
          </item>
@@ -125,6 +128,9 @@ The buttons are therefore dynamically loaded into the GUI.</string>
             <iconset resource="../qSlicerAnnotationModule.qrc">
              <normaloff>:/Icons/AnnotationPolyline.png</normaloff>:/Icons/AnnotationPolyline.png</iconset>
            </property>
+           <property name="checkable">
+            <bool>true</bool>
+           </property>
           </widget>
          </item>
          <item row="1" column="2">
@@ -150,23 +156,13 @@ The buttons are therefore dynamically loaded into the GUI.</string>
             <iconset resource="../qSlicerAnnotationModule.qrc">
              <normaloff>:/Icons/AnnotationSpline.png</normaloff>:/Icons/AnnotationSpline.png</iconset>
            </property>
+           <property name="checkable">
+            <bool>true</bool>
+           </property>
           </widget>
          </item>
          <item row="2" column="0" colspan="4">
           <layout class="QHBoxLayout" name="horizontalLayout">
-           <item>
-            <widget class="QLabel" name="currentMouseModeLabel">
-             <property name="text">
-              <string/>
-             </property>
-             <property name="pixmap">
-              <pixmap resource="../qSlicerAnnotationModule.qrc">:/Icons/AnnotationMouseModePick.png</pixmap>
-             </property>
-             <property name="alignment">
-              <set>Qt::AlignCenter</set>
-             </property>
-            </widget>
-           </item>
            <item>
             <widget class="QPushButton" name="resumeButton">
              <property name="enabled">
@@ -286,6 +282,9 @@ The buttons are therefore dynamically loaded into the GUI.</string>
            <property name="icon">
             <iconset resource="../qSlicerAnnotationModule.qrc">
              <normaloff>:/Icons/AnnotationNote.png</normaloff>:/Icons/AnnotationNote.png</iconset>
+           </property>
+           <property name="checkable">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
