ENH: Fiducials and sticky node work now in the Annotation module.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14567 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/Annotation/Resources/UI/qSlicerAnnotationModule.ui
+++ b/QTModules/Annotation/Resources/UI/qSlicerAnnotationModule.ui
@@ -261,7 +261,7 @@ p, li { white-space: pre-wrap; }
           </layout>
          </item>
          <item row="1" column="3">
-          <widget class="QPushButton" name="stickyNodeButton">
+          <widget class="QPushButton" name="stickyTypeButton">
            <property name="enabled">
             <bool>true</bool>
            </property>
