--- a/QTModules/Annotation/Resources/UI/qSlicerAnnotationModule.ui
+++ b/QTModules/Annotation/Resources/UI/qSlicerAnnotationModule.ui
@@ -101,7 +101,7 @@
           </widget>
          </item>
          <item row="1" column="1">
-          <widget class="QPushButton" name="polylineTypeButton">
+          <widget class="QPushButton" name="bidimensionalTypeButton">
            <property name="enabled">
             <bool>true</bool>
            </property>
