ENH: EMSegment - qSlicerEMSegmentPanel now derives from class qSlicerEMSegmentWidget
qSlicerEMSegmentWidget provides the slot setMRMLManager() and
the corresponding signal mrmlManagerChanged()

All widgets specific to EMSegment should extend from qslicerEMSegmentWidget

The corresponding QtDesigner plugin has also been added

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14609 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/EMSegment/Resources/UI/qSlicerEMSegmentDefineInputChannelsPanel.ui
+++ b/QTModules/EMSegment/Resources/UI/qSlicerEMSegmentDefineInputChannelsPanel.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>qSlicerEMSegmentDefineInputChannelsPanel</class>
- <widget class="qSlicerWidget" name="qSlicerEMSegmentDefineInputChannelsPanel">
+ <widget class="qSlicerEMSegmentWidget" name="qSlicerEMSegmentDefineInputChannelsPanel">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -104,9 +104,9 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-    <class>qSlicerWidget</class>
-    <extends>QWidget</extends>
-    <header>qSlicerWidget.h</header>
+    <class>qSlicerEMSegmentWidget</class>
+    <extends>qSlicerWidget</extends>
+    <header>qSlicerEMSegmentWidget.h</header>
     <container>1</container>
    </customwidget>
  </customwidgets>
