--- a/QTModules/EMSegment/Resources/UI/qSlicerEMSegmentEditNodeBasedParametersPanel.ui
+++ b/QTModules/EMSegment/Resources/UI/qSlicerEMSegmentEditNodeBasedParametersPanel.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>qSlicerEMSegmentEditNodeBasedParametersPanel</class>
- <widget class="qSlicerWidget" name="qSlicerEMSegmentEditNodeBasedParametersPanel">
+ <widget class="qSlicerEMSegmentWidget" name="qSlicerEMSegmentEditNodeBasedParametersPanel">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -19,6 +19,12 @@
    <class>qSlicerWidget</class>
    <extends>QWidget</extends>
    <header>qSlicerWidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>qSlicerEMSegmentWidget</class>
+   <extends>qSlicerWidget</extends>
+   <header>qSlicerEMSegmentWidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
