--- a/QTModules/EMSegment/Resources/UI/qSlicerEMSegmentDefineTaskPanel.ui
+++ b/QTModules/EMSegment/Resources/UI/qSlicerEMSegmentDefineTaskPanel.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>qSlicerEMSegmentDefineTaskPanel</class>
- <widget class="qSlicerWidget" name="qSlicerEMSegmentDefineTaskPanel">
+ <widget class="qSlicerEMSegmentWidget" name="qSlicerEMSegmentDefineTaskPanel">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -63,9 +63,9 @@
    <header>qMRMLNodeComboBox.h</header>
   </customwidget>
   <customwidget>
-   <class>qSlicerWidget</class>
-   <extends>QWidget</extends>
-   <header>qSlicerWidget.h</header>
+   <class>qSlicerEMSegmentWidget</class>
+   <extends>qSlicerWidget</extends>
+   <header>qSlicerEMSegmentWidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
