--- a/QTModules/EMSegment/Resources/UI/qSlicerEMSegmentRunSegmentationPanel.ui
+++ b/QTModules/EMSegment/Resources/UI/qSlicerEMSegmentRunSegmentationPanel.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>qSlicerEMSegmentRunSegmentationPanel</class>
- <widget class="qSlicerWidget" name="qSlicerEMSegmentRunSegmentationPanel">
+ <widget class="qSlicerEMSegmentWidget" name="qSlicerEMSegmentRunSegmentationPanel">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -16,9 +16,9 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>qSlicerWidget</class>
-   <extends>QWidget</extends>
-   <header>qSlicerWidget.h</header>
+   <class>qSlicerEMSegmentWidget</class>
+   <extends>qSlicerWidget</extends>
+   <header>qSlicerEMSegmentWidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
