--- a/QTModules/EMSegment/Resources/UI/qSlicerEMSegmentDefineTaskPanel.ui
+++ b/QTModules/EMSegment/Resources/UI/qSlicerEMSegmentDefineTaskPanel.ui
@@ -28,7 +28,7 @@
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="qMRMLNodeComboBox" name="MRMLNodeComboBox">
+       <widget class="qMRMLNodeComboBox" name="TaskSelectorComboBox">
         <property name="nodeTypes">
          <stringlist>
           <string>vtkMRMLEMSNode</string>
@@ -74,7 +74,7 @@
   <connection>
    <sender>qSlicerEMSegmentDefineTaskPanel</sender>
    <signal>mrmlSceneChanged(vtkMRMLScene*)</signal>
-   <receiver>MRMLNodeComboBox</receiver>
+   <receiver>TaskSelectorComboBox</receiver>
    <slot>setMRMLScene(vtkMRMLScene*)</slot>
    <hints>
     <hint type="sourcelabel">
