ENH: EMSegment - Added qSlicerEMSegmentAnatomicalTreeWidget
This widget provide similar features to its KWWidget counterpart.

The tree is now able to display StructureName, Label,
classWeight, atlasWeight and alpha.

But note that for now, Label, classWeight, atlasWeight and alpha are readonly.

Internally, the widget is composed of a TreeView and a StandardItemModel

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14612 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTGUI/Resources/qSlicerBaseQTGUI.qrc
+++ b/Base/QTGUI/Resources/qSlicerBaseQTGUI.qrc
@@ -63,5 +63,8 @@
     <file>Icons/MousePlaceMode.png</file>
     <file>Icons/MouseSinglePlaceMode.png</file>
     <file>Icons/MouseRotateMode.png</file>
+    
+    <file>Icons/TreeClose.png</file>
+    <file>Icons/TreeOpen.png</file>
   </qresource>
 </RCC>
